profilelist1exp/unpackaged/objects/Marketing_Maintenance__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Marketing_Maintenance</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Brand_Description__c</fullName>
        <label>Brand Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lattice_Play__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lattice Play</label>
        <referenceTo>LBI__Play__c</referenceTo>
        <relationshipName>Marketing_Maintenance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Created_Date__c</fullName>
        <formula>Opportunity_Name__r.CreatedDate</formula>
        <label>Opportunity Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_ID__c</fullName>
        <label>Deal ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Opportunity.Deal_ID__c</field>
                <operation>equals</operation>
                <valueField>Opportunity.Deal_ID__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Marketing_Maintenance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <formula>TEXT(Opportunity_Name__r.StageName)</formula>
        <label>Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Price__c</fullName>
        <formula>Opportunity_Name__r.Unweighted_Rev_Formula__c</formula>
        <label>Total Price</label>
        <type>Text</type>
    </fields>
    <label>Lead opportunity</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ID-{0000}</displayFormat>
        <label>Marketing Maintenance ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lead opportunities</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>